# kan-gpu

./: Cargo.toml  README.md
examples/: simple_test.rs
src/: bspline.rs  kan.rs  kan_layer.rs  lib.rs  main.rs  univariate_function.rs
src/shaders/: bspline.wgsl  kan_layer.wgsl  univariate_function.wgsl  weight_update.wgsl
