[package]
name = "kan-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
flume = "0.11"
tokio = { version = "1.34", features = ["full"] }
rand = "0.8"
futures = "0.3"
env_logger = "0.10"

[[example]]
name = "simple_test"
path = "examples/simple_test.rs"